--- a/css/style.css
+++ b/css/style.css
@@ -166,3 +166,33 @@ ul {
     font-size: 1.9rem;
     line-height: 1.8;
 }
+
+.features .container {
+    padding: 6rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 2rem;
+    margin: auto;
+    text-align: center;
+}
+
+.features .feature {
+    padding: 2rem;
+}
+
+.features .feature svg {
+    font-size: 3rem;
+    color: var(--mainColor);
+}
+
+.features .feature h3 {
+    font-weight: 800;
+    margin: 3rem 0;
+    font-size: 1.6rem;
+}
+
+.features .feature p {
+    font-size: 1.6rem;
+    color: #333;
+    line-height: 1.6;
+}
