add portfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --mainColor: #10cab7;
     --headColor: #ebeced;
     --secondColor: #2c4755;
+    --sectionPadding: 10rem;
 }
 
 *,
@@ -229,7 +230,7 @@ ul {
 }
 
 .services {
-    padding: 10rem 0;
+    padding: var(--sectionPadding) 0;
 }
 
 .services .services-content {
@@ -269,7 +270,7 @@ ul {
 }
 
 .services .service .service-text p {
-    color: #ddd;
+    color: #333;
     line-height: 1.6;
     font-size: 1.2rem;
     font-weight: 300;
@@ -298,5 +299,51 @@ ul {
 @media(max-width:1199px) {
     .media-image {
         display: none;
+    }
+}
+
+.portfolio {
+    padding: var(--sectionPadding) 0;
+    background: #ddd;
+}
+
+.portfolio .container {
+    margin: auto;
+}
+
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 30px;
+    margin-top: 8rem;
+}
+
+.portfolio-content .card {
+    background: #fff;
+}
+
+.portfolio-content .card img {
+    max-width: 100%;
+}
+
+.portfolio-content .card .info {
+    padding: 2rem;
+}
+
+.portfolio-content .card .info h3 {
+    margin: 0;
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+
+.portfolio-content .card .info p {
+    margin-top: .3rem;
+    line-height: 1.6;
+    color: #333;
+}
+
+@media (max-width:767px) {
+    .portfolio-content .card .info {
+        text-align: center;
     }
 }
